# ComfyUI_WordCloud

./: .gitignore  README.MD  README_CN.MD  __init__.py  dzNodes.json  dzNodes.py  font_dir.ini  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
mtb/: dz_comfy_shared.js  dz_debug.js  dz_mtb_widgets.js
py/: comfy_wordcloud.py  load_textfile.py  rgb_picker.py
workflow/: comfy_wordcloud_advance.json  comfy_wordcloud_simple.json
